# ConverterTxtToXlsx

./: .gitignore  CMakeLists.txt  Main.qml  MainWindow.qml  README.md  converter.cpp  converter.h  main.cpp
Converter_python_exe/: build_exe.py  build_exe_with_icon.py  check_deps.py  converter_app.py  debug.bat  requirements.txt  run.bat  run_no_console.bat
